2010-04-22  James Youngman  <jay@gnu.org>

	Explain what the googletest directory is and how to run unit tests.
	* README (Testing): Expand to include a description of the unit
	tests and how to run them.
	* docs/borrowed-files.txt: Mention googletest/*.  Also remove tghe
	out-of-date information about the last update to the files which
	autoconf updates.
	* googletest/README.cssc: Add README file explaining the
	relationship between the code in this directory and the rest of
	CSSC.

2010-04-21  James Youngman  <jay@gnu.org>

	Add unit test cases for ASSERT failures.
	* unit-tests/test_mylist.cc (MylistDeathTest): Various unit test
	cases for ASSERT failures.
	* unit-tests/test_sid.cc (SidTest.Successor): Verify that the null
	SID's successor is 1.1.

	Unit test sid_list::merge and sid_list::remove
	* unit-tests/test_sid_list.cc: Enable unit tests for
	sid_list::merge and sid_list::remove.  Include rl-merge.h since
	that file defines these methods.

	Unit test release_list::merge and release_list::remove
	* unit-tests/test_rel_list.cc: Add unit tests for
	release_list::merge and release_list::remove.

	Move rl-merge.cc into libcssc.a
	* Makefile.am (libcssc_a_SOURCES): Move rl-merge.cc into the library.
	(get_SOURCES): Remove rl-merge.cc.
	(admin_SOURCES): Likewise.
	* rel_list.h: Remove some unnecessary blank lines.

	Add unit test for rel_list.h
	* unit-tests/test_rel_list.cc: New unit test.
	* unit-tests/Makefile.am (check_PROGRAMS): Add test_rel_list.
	(test_rel_list_SOURCES): Add test_rel_list.cc.

	Add unit test for sid_list.h
	* unit-tests/test_sid_list.cc: New unit test; tests sid_list.h.
	* unit-tests/Makefile.am (check_PROGRAMS): Add test_sid_list.
	(test_sid_list_SOURCES): Add test_sid_list.cc.

2010-04-20  James Youngman  <jay@gnu.org>

	Add unit test for release.h.
	* unit-tests/Makefile.am (check_PROGRAMS): Add test_release.
	(test_release_SOURCES): Add test_release.cc.
	* unit-tests/test_release.cc: New unit test.

	Add unit test for relvbr.