@@ -17,7 +17,7 @@ LDADD = ../googletest/lib/libgtest.la \
 
 TESTS = $(check_PROGRAMS)
 check_PROGRAMS = test_mylist test_myset test_sid test_relvbr \
-	test_release test_sid_list test_rel_list
+	test_release test_sid_list test_rel_list test_sccsdate
 
 test_mylist_SOURCES = test_mylist.cc
 test_myset_SOURCES = test_myset.cc
@@ -26,3 +26,4 @@ test_relvbr_SOURCES = test_relvbr.cc
 test_release_SOURCES = test_release.cc
 test_sid_list_SOURCES = test_sid_list.cc
 test_rel_list_SOURCES = test_rel_list.cc
+test_sccsdate_SOURCES = test_sccsdate.cc
