@@ -1,0 +1,45 @@
+/*
+ * test_sccsdate.cc: Part of GNU CSSC.
+ * 
+ * 
+ *    Copyright (C) 2010 Free Software Foundation, Inc. 
+ * 
+ *    This program is free software: you can redistribute it and/or modify
+ *    it under the terms of the GNU General Public License as published by
+ *    the Free Software Foundation, either version 3 of the License, or
+ *    (at your option) any later version.
+ *    
+ *    This program is distributed in the hope that it will be useful,
+ *    but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *    GNU General Public License for more details.
+ *    
+ *    You should have received a copy of the GNU General Public License
+ *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ * 
+ * Unit tests for sccsdate.h.
+ *
+ */
+#include "cssc.h"
+#include "sccsdate.h"
+#include <gtest/gtest.h>
+
+
+TEST(SccsdateTest, NullConstructor)
+{
+  const sccs_date d;
+  ASSERT_FALSE(d.valid());
+}
+
+TEST(SccsdateTest, StringConstructor) 
+{
+  sccs_date d12("990519014208");
+  ASSERT_TRUE(d12.valid());
+  ASSERT_EQ("99/05/19 01:42:08",
+	    d12.as_string());
+
+  sccs_date d14("19990519014208");
+  ASSERT_TRUE(d14.valid());
+  ASSERT_EQ("99/05/19 01:42:08",
+	    d14.as_string());
+}
